[S12P21A402-257] refactor: Refactor item purchase logic